tests/snapshots/apply__verbose_reapply_output__clean_up_prints_nothing_without_verbose.snap
---
source: tests/apply.rs
expression: captured
---
deployed 0, replaced 1, skipped 0, removed 1, pruned 0
