tests/snapshots/apply__verbose_reapply_output__reports_clean_up_removals.snap
---
source: tests/apply.rs
expression: captured
---
replaced <root>/target/a.txt
removed <root>/target/b.txt
deployed 0, replaced 1, skipped 0, removed 1, pruned 0
